Form and book covers no longer overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+    display: border-box;
+}
+
 .custom-large-height {
     height: 50vh;
 }
